--- a/src/scss/sections/_about.scss
+++ b/src/scss/sections/_about.scss
@@ -5,28 +5,29 @@
 #about {
   @extend %article-wrapper;
   flex-direction: column;
-  font-size: 1.6rem;
-  margin: 15vh 0 8vh;
+  margin-bottom: 5vh;
 
   & .section-header-img-wrapper {
     width: 70%;
-    max-width: 190px;
+    max-width: 140px;
+    @include media-breakpoint-up(xxl) {
+      max-width: 190px;
+    }
   }
 
   & .article-body {
-    width: 75%;
-    margin-left: 25%;
     align-items: stretch;
     justify-content: flex-start;
-    padding-right: 26%;
     flex-direction: column;
+    padding-right: 8%;
+    padding-left: 8%;
+    @include media-breakpoint-up(xl) {
+      padding-left: 0;
+      padding-right: 25%;
+    }
   }
 
   & .article-content-wrapper {
-    width: 75%;
-    overflow-y: scroll;
-    max-height: 100%;
-
     & p {
       margin-bottom: 0;
       text-align: center;
@@ -38,10 +39,16 @@
   }
 
   & .about-interest-content {
-    padding-right: 9%;
     padding-left: 0;
     display: flex;
     align-items: center;
+    padding-right: 3%;
+    @include media-breakpoint-only(xl) {
+      padding-right: 6%;
+    }
+    @include media-breakpoint-up(xxl) {
+      padding-right: 9%;
+    }
   }
 
   & .about-interest {
@@ -58,17 +65,23 @@
 
       & .about-interest-content {
         text-align: right;
-        padding-left: 9%;
         padding-right: 0;
+        padding-left: 3%;
+        @include media-breakpoint-only(xl) {
+          padding-left: 6%;
+        }
+        @include media-breakpoint-up(xxl) {
+          padding-left: 9%;
+        }
       }
     }
 
     & .about-interest-title {
       @include text-thin-title();
-      width: 200px;
-      height: 200px;
-      margin: 0 3rem 0 0;
-      padding: 3rem;
+      width: 160px;
+      height: 160px;
+      margin: 0 2rem 0 0;
+      padding: 1rem;
       border-radius: 50%;
       border: 1px dotted #8c8c8c;
       display: flex;
@@ -76,6 +89,13 @@
       align-items: center;
       text-align: center;
       flex: 1 0 auto;
+      @include media-breakpoint-up(xxl) {
+        width: 200px;
+        height: 200px;
+        margin: 0 3rem 0 0;
+        margin: 0 3rem 0 0;
+        padding: 3rem;
+      }
     }
   }
 
@@ -113,7 +133,7 @@
   & .about-photo {
     margin: 0 auto 3rem auto;
     position: relative;
-    left: 15px;
+    left: 22px;
     width: 100%;
     max-width: 400px;
     height: 316px;
@@ -142,9 +162,8 @@
     }
 
     & .about-item-subtitle {
+      @include text-light-title();
       margin-bottom: 2rem;
-      font-family: $font-family-work-sans-thin;
-      font-size: 1.8rem;
     }
 
     & .about-item-modal-details-wrapper {
