--- a/src/scss/sections/_common.scss
+++ b/src/scss/sections/_common.scss
@@ -311,6 +311,7 @@ h3, .h3 {
   justify-content: center;
   position: relative;
   width: 100%;
+  height: 100%;
   margin-left: 0;
   @include media-breakpoint-only(xl) {
     width: 77%;
