--- a/src/scss/sections/_contact.scss
+++ b/src/scss/sections/_contact.scss
@@ -4,12 +4,17 @@
 
 #contact {
   @extend %article-wrapper;
-  padding-right: 5%;
   align-items: center;
-  height: 60vh;
+  min-height: 500px;
+  @include media-breakpoint-only(xl) {
+    min-height: 600px;
+  }
+  @include media-breakpoint-up(xxl) {
+    min-height: 700px;
+  }
 
   & .section-header {
-    height: 60vh;
+    height: 100%
   }
 
   & .section-header-img-wrapper {
@@ -18,11 +23,15 @@
   }
 
   & .article-body {
-    font-size: 1.6rem;
-    height: 85%;
+    justify-content: center;
     flex-direction: column;
+    padding-right: 8%;
+    padding-left: 8%;
     text-align: center;
-    padding-right: 26%;
+    @include media-breakpoint-up(xl) {
+      padding-left: 0;
+      padding-right: 25%;
+    }
   }
 
   & .article-content-wrapper {
@@ -56,14 +65,19 @@
 
   & .contact-method {
     border-radius: 50%;
-    width: 22rem;
-    height: 22rem;
+    width: 190px;
+    height: 190px;
     margin: 2rem 1rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     border: 1px dotted #8c8c8c;
+    @include media-breakpoint-up(xxl) {
+      margin: 3rem 2rem;
+      width: 250px;
+      height: 250px;
+    }
   }
 
   & .contact-method-img {
