--- a/src/scss/sections/_experience.scss
+++ b/src/scss/sections/_experience.scss
@@ -9,7 +9,10 @@
 
   & .section-header-img-wrapper {
     width: 90%;
-    max-width: 300px;
+    max-width: 210px;
+    @include media-breakpoint-up(xxl) {
+      max-width: 300px;
+    }
   }
 
   & .section-header-img {
@@ -18,15 +21,18 @@
   }
 
   & .article-body {
-    width: 75%;
-    margin-left: 25%;
     align-items: stretch;
     justify-content: flex-start;
+    padding-right: 3%;
   }
 
   & .experience-timeline {
-    width: 15%;
+    width: 13%;
+    margin-left: 3%;
     position: relative;
+    @include media-breakpoint-up(xl) {
+      width: 15%;
+    }
 
     &:after {
       content: '';
