--- a/src/scss/sections/_references.scss
+++ b/src/scss/sections/_references.scss
@@ -3,8 +3,13 @@
 
 #references {
   @extend %article-wrapper;
-  margin: 150px 0 ;
-  min-height: 380px;
+  margin: 10vh 0;
+  @include media-breakpoint-only(xl) {
+    margin: 12vh 0;
+  }
+  @include media-breakpoint-up(xxl) {
+    margin: 15vh 0;
+  }
 
   & .article-body {
     width: 100%;
@@ -14,13 +19,23 @@
   }
 
   & .carousel {
-    min-height: 380px;
+    min-height: 520px;
+    @include media-breakpoint-only(xl) {
+      min-height: 320px;
+    }
+    @include media-breakpoint-up(xxl) {
+      min-height: 350px;
+    }
   }
 
   & .carousel-item-content {
     display: flex;
     justify-content: space-around;
-    padding: 0 3rem;
+    padding: 0;
+    @include media-breakpoint-down(lg) {
+      flex-direction: column;
+      align-items: center;
+    }
   }
 
   & .references-content {
@@ -29,16 +44,23 @@
 
   & .reference-wrapper {
     width: 28%;
+    @include media-breakpoint-down(lg) {
+      width: 90%;
+      padding-bottom: 3%;
+    }
   }
 
   & .references-title {
     @include text-regular-title();
-    margin-bottom: 6rem;
+    margin-bottom: 4%;
   }
 
   & .reference-content {
     position: relative;
     font-style: italic;
+    @include media-breakpoint-down(lg) {
+      margin-bottom: 0.3rem;
+    }
   }
 
   & .reference-author {
@@ -46,6 +68,9 @@
     margin-bottom: 0.6rem;
     margin-top: 1.2rem;
     position: relative;
+    @include media-breakpoint-down(lg) {
+      margin-top: 0.6rem;
+    }
   }
 
   & .reference-author-title {
@@ -73,27 +98,34 @@
 
   & .carousel-control {
     position: absolute;
-    top: 10px;
+    top: 33%;
+    @include media-breakpoint-up(xl) {
+      top: 10px;
+    }
   }
 
   & .carousel-control.left {
-    left: -80px;
+    left: -55px;
+    @include media-breakpoint-up(xl) {
+      left: -80px;
+    }
   }
 
   & .carousel-control.right {
-    right: -80px;
+    right: -55px;
+    @include media-breakpoint-up(xl) {
+      right: -80px;
+    }
   }
 
   & .carousel-indicators {
-    position: absolute;
-    bottom: -2%;
-    left: 47%;
+    bottom: 0;
   }
 
   & .references-linkedin-link {
     @include make-button();
     clear: both;
     display: block;
-    margin-top: 4rem;
+    margin-top: 1%;
   }
 }
