--- a/src/scss/sections/_skills.scss
+++ b/src/scss/sections/_skills.scss
@@ -4,15 +4,19 @@
 
 #skills {
   @extend %article-wrapper;
-  height: 80vh;
+  height: 90vh;
+  min-height: 700px;
   //background: linear-gradient(to right, rgba(255,255,255,0.8) 0%,rgba(255,255,255,0.7) 100%); ;
 
-  & .article-body {
-    height: 80vh;
+  & .section-header-img-wrapper {
+    max-width: 210px;
+    @include media-breakpoint-up(xxl) {
+      max-width: 250px;
+    }
   }
 
-  & .section-header-img-wrapper {
-    max-width: 250px;
+  & .section-header {
+    height: 100%;
   }
 
   & .article-img-wrapper {
@@ -72,6 +76,7 @@
     & ul {
       list-style: none;
       padding: 0;
+      line-height: 1.3;
     }
   }
 
@@ -83,21 +88,38 @@
 
   & .skills-list-title-small {
     @include text-regular-title-small();
-    margin-top: 0;
+    margin-top: 0.5rem;
     margin-bottom: 0.4rem;
   }
 
   %skills-group {
     position: absolute;
     top: 50%;
-    left: 45%;
+    left: 50%;
+    @include media-breakpoint-only(xl) {
+      top: 50%;
+      left: 49.4%;
+    }
+    @include media-breakpoint-up(xxl) {
+      top: 50%;
+      left: 47.8%;
+    }
     text-align: center;
+
   }
 
   & .skills-group-javascript {
     @extend %skills-group;
-    height: 404px;
-    width: 404px;
+    padding-top: 34%;
+    width: 34%;
+    @include media-breakpoint-only(xl) {
+      padding-top: 31%;
+      width: 31%;
+    }
+    @include media-breakpoint-up(xxl) {
+      padding-top: 29%;
+      width: 29%;
+    }
 
     & .cogwheel {
       animation-duration: 30s;
@@ -110,8 +132,16 @@
   }
 
   %skills-group-medium {
-    height: 304px;
-    width: 304px;
+    padding-top: 25%;
+    width: 25%;
+    @include media-breakpoint-only(xl) {
+      padding-top: 22%;
+      width: 22%;
+    }
+    @include media-breakpoint-up(xxl) {
+      padding-top: 20%;
+      width: 20%;
+    }
 
     & .cogwheel {
       animation-duration: 60s;
@@ -141,8 +171,17 @@
 
   %skills-group-small {
     @extend %skills-group;
-    height: 204px;
-    width: 204px;
+    padding-top: 20%;
+    width: 20%;
+    @include media-breakpoint-only(xl) {
+      padding-top: 17%;
+      width: 17%;
+    }
+    @include media-breakpoint-up(xxl) {
+      padding-top: 15%;
+      width: 15%;
+    }
+
   }
 
   & .skills-group-tools {
@@ -150,8 +189,16 @@
     @extend %skills-group-small;
 
     & .skills-list {
-      top: 60%;
-      left: -164%;
+      top: 58%;
+      left: -145%;
+      @include media-breakpoint-only(xl) {
+        top: 60%;
+        left: -156%;
+      }
+      @include media-breakpoint-up(xxl) {
+        top: 60%;
+        left: -160%;
+      }
     }
   }
 
@@ -160,8 +207,16 @@
     @extend %skills-group-small;
 
     & .skills-list {
-      top: 60%;
-      right: -64%;
+      top: 58%;
+      right: -47%;
+      @include media-breakpoint-only(xl) {
+        top: 60%;
+        right: -56%;
+      }
+      @include media-breakpoint-up(xxl) {
+        top: 60%;
+        right: -60%;
+      }
     }
   }
 
@@ -170,8 +225,16 @@
     @extend %skills-group-small;
 
     & .skills-list {
-      top: -160%;
-      left: -164%;
+      top: -156%;
+      left: -145%;
+      @include media-breakpoint-only(xl) {
+        top: -160%;
+        left: -156%;
+      }
+      @include media-breakpoint-up(xxl) {
+        top: -160%;
+        left: -160%;
+      }
     }
   }
 
@@ -180,8 +243,16 @@
     @extend %skills-group-small;
 
     & .skills-list {
-      top: -160%;
-      right: -64%;
+      top: -156%;
+      right: -47%;
+      @include media-breakpoint-only(xl) {
+        top: -160%;
+        right: -56%;
+      }
+      @include media-breakpoint-up(xxl) {
+        top: -160%;
+        right: -60%;
+      }
     }
   }
 
